# RG

./: package-lock.json
2023_10_05_vaja_01_osnove_vektorjev_matrik/: CMakeLists.txt
2023_10_05_vaja_1_osnove_vektorjev_matrik/: main.cpp
2023_10_12_vaja_2_piramida/: CMakeLists.txt  OpenGLWindow.cpp  main.cpp
2023_10_12_vaja_2_piramida/object/: Mesh.cpp  Mesh.h
2023_10_12_vaja_2_piramida/object/Cuboid/: Cuboid.cpp  Cuboid.h
2023_10_12_vaja_2_piramida/shader/: Shader.cpp  Shader.h
2023_10_12_vaja_2_piramida/world/window/: OpenGLWindow.h
2023_10_26_vaja_04_Transformacije_Projekcije/: CMakeLists.txt  main.cpp
2023_10_26_vaja_04_Transformacije_Projekcije/buffer/: Buffer.h
2023_10_26_vaja_04_Transformacije_Projekcije/buffer/layout/: BufferLayout.cpp
2023_10_26_vaja_04_Transformacije_Projekcije/color/: Color.cpp  Color.h
2023_10_26_vaja_04_Transformacije_Projekcije/object/: Mesh.cpp  Mesh.h
2023_10_26_vaja_04_Transformacije_Projekcije/object/cuboid/: Cuboid.cpp  Cuboid.h
2023_10_26_vaja_04_Transformacije_Projekcije/object/cuboid/cuboid-shape/: CuboidShape.cpp  CuboidShape.h
2023_10_26_vaja_04_Transformacije_Projekcije/object/cuboid/cuboid-shape/cuboid-shape-element/: CuboidShapeElement.cpp  CuboidShapeElement.h
2023_10_26_vaja_04_Transformacije_Projekcije/object/transformation/rotation/: Rotation.cpp  Rotation.h
2023_10_26_vaja_04_Transformacije_Projekcije/object/transformation/scale/: Scale.cpp  Scale.h
2023_10_26_vaja_04_Transformacije_Projekcije/object/transformation/translation/: Translation.cpp  Translation.h
2023_10_26_vaja_04_Transformacije_Projekcije/renderer/: Renderer.cpp  Renderer.h
2023_10_26_vaja_04_Transformacije_Projekcije/shader/: Shader.cpp  Shader.h
2023_10_26_vaja_04_Transformacije_Projekcije/shader/program/: ShaderProgram.cpp  ShaderProgram.h
2023_10_26_vaja_04_Transformacije_Projekcije/utils/: Direction.h  RotationDirection.h
2023_10_26_vaja_04_Transformacije_Projekcije/vertex_array/: VertexArray.h
2023_10_26_vaja_04_Transformacije_Projekcije/world/camera/: Camera.cpp  Camera.h
2023_10_26_vaja_04_Transformacije_Projekcije/world/io/keyboard/: Keyboard.cpp  Keyboard.h
2023_10_26_vaja_04_Transformacije_Projekcije/world/io/mouse/: Mouse.h
2023_10_26_vaja_04_Transformacije_Projekcije/world/window/: OpenGLWindow.cpp  OpenGLWindow.h
2023_11_20_napredni_objekti/: CMakeLists.txt  main.cpp  stb_image.h
2023_11_20_napredni_objekti/buffer/index/: IndexBuffer.h
2023_11_20_napredni_objekti/graphics/: stb_image.h
2023_11_20_napredni_objekti/graphics/buffer/: Buffer.h
2023_11_20_napredni_objekti/graphics/buffer/index/: IndexBuffer.cpp
2023_11_20_napredni_objekti/graphics/buffer/layout/: BufferLayout.h
2023_11_20_napredni_objekti/graphics/buffer/vertex/: VertexBuffer.cpp  VertexBuffer.h
2023_11_20_napredni_objekti/graphics/color/: Color.cpp  Color.h
2023_11_20_napredni_objekti/graphics/material/: Material.cpp  Material.h
2023_11_20_napredni_objekti/graphics/object/: Mesh.cpp
2023_11_20_napredni_objekti/graphics/object/2d/rectangle/: Rectangle.cpp  Rectangle.h
2023_11_20_napredni_objekti/graphics/object/cuboid/: Cuboid.h
2023_11_20_napredni_objekti/graphics/object/cuboid/cuboid-shape/: CuboidShape.cpp  CuboidShape.h
2023_11_20_napredni_objekti/graphics/object/cuboid/cuboid-shape/cuboid-shape-element/: CuboidShapeElement.cpp
2023_11_20_napredni_objekti/graphics/object/model/: Model.cpp  Model.h
2023_11_20_napredni_objekti/graphics/object/texture-mesh/: TextureMesh.cpp
2023_11_20_napredni_objekti/graphics/object/transformation/rotation/: Rotation.cpp  Rotation.h
2023_11_20_napredni_objekti/graphics/object/transformation/translation/: Translation.cpp
2023_11_20_napredni_objekti/graphics/renderer/: Renderer.cpp
2023_11_20_napredni_objekti/graphics/shader/program/: ShaderProgram.h
2023_11_20_napredni_objekti/graphics/texture/: Texture.cpp  Texture.h
2023_11_20_napredni_objekti/graphics/vertex_array/: VertexArray.cpp
2023_11_20_napredni_objekti/graphics/world/camera/: Camera.cpp  Camera.h
2023_11_20_napredni_objekti/graphics/world/io/mouse/: Mouse.cpp
2023_11_20_napredni_objekti/graphics/world/light/: Light.cpp  Light.h
2023_11_20_napredni_objekti/graphics/world/window/: OpenGLWindow.cpp  OpenGLWindow.h
2023_11_20_napredni_objekti/material/: Material.cpp  Material.h
2023_11_20_napredni_objekti/object/: Mesh.cpp  Mesh.h
2023_11_20_napredni_objekti/object/cuboid/cuboid-shape/cuboid-shape-element/: CuboidShapeElement.h
2023_11_20_napredni_objekti/object/model/: Model.cpp  Model.h
2023_11_20_napredni_objekti/object/transformation/rotation/: Rotation.cpp
2023_11_20_napredni_objekti/shader/program/: ShaderProgram.cpp
2023_11_20_napredni_objekti/toolbar/: Toolbar.cpp  Toolbar.h
2023_11_20_napredni_objekti/utils/: DrawMode.h
2023_11_20_napredni_objekti/world/camera/: Camera.cpp  Camera.h
2023_11_20_napredni_objekti/world/io/keyboard/: Keyboard.h
2023_11_20_napredni_objekti/world/io/mouse/: Mouse.cpp
2023_11_20_napredni_objekti/world/window/: OpenGLWindow.h
2024_01_11_Textures/: CMakeLists.txt
2024_01_11_Textures/graphics/buffer/: Buffer.h
2024_01_11_Textures/graphics/material/: Material.h
2024_01_11_Textures/graphics/object/: Mesh.h
2024_01_11_Textures/graphics/object/model/: Model.cpp  Model.h
2024_01_11_Textures/graphics/object/texture-mesh/: TextureMesh.h
2024_01_11_Textures/graphics/object/transformation/rotation/: Rotation.cpp  Rotation.h
2024_01_11_Textures/graphics/object/transformation/scale/: Scale.cpp
2024_01_11_Textures/graphics/renderer/: Renderer.h
2024_01_11_Textures/graphics/utils/font/: Font.cpp  TextRenderer.h
2024_01_11_Textures/graphics/world/camera/: Camera.cpp
2024_01_11_Textures/graphics/world/io/keyboard/: Keyboard.h
2024_01_11_Textures/graphics/world/io/mouse/: Mouse.h
2024_01_11_Textures/graphics/world/light/: Lighting.h
2024_01_11_Textures/graphics/world/light/diffuse/: DiffuseLight.cpp
2024_01_11_Textures/graphics/world/window/: OpenGLWindow.cpp  OpenGLWindow.h
2024_01_11_Textures/toolbar/: Toolbar.cpp  Toolbar.h
(+97 files in other folders)
